<resources>
    <string name="app_name">Calculator</string>
    <string name="clear_button">AC</string>
    <string name="percent_button">%</string>
    <string name="division_button">/</string>
    <string name="multiplication_button">\u00d7</string>
    <string name="minus_button">-</string>
    <string name="plus_button">+</string>
    <string name="backspace_button">⌫</string>
    <string name="equals_button">=</string>
    <string name="change_layout_button">⇆</string>
    <string name="dot_button">.</string>
    <string name="digit_zero_button">0</string>
    <string name="digit_one_button">1</string>
    <string name="digit_two_button">2</string>
    <string name="digit_three_button">3</string>
    <string name="digit_four_button">4</string>
    <string name="digit_five_button">5</string>
    <string name="digit_six_button">6</string>
    <string name="digit_seven_button">7</string>
    <string name="digit_eight_button">8</string>
    <string name="digit_nine_button">9</string>
    <string name="change_trigonometry_mode_button">2nd</string>
    <string name="deg_rad_switch_button">deg</string>
    <string name="sin_button">sin</string>
    <string name="cos_button">cos</string>
    <string name="tan_button">tan</string>
    <string name="power_button">x^y</string>
    <string name="lg_button">lg</string>
    <string name="ln_button">ln</string>
    <string name="open_parenthesis_button">(</string>
    <string name="close_parenthesis_button">)</string>
    <string name="sqrt_button">√x</string>
    <string name="factorial_button">x!</string>
    <string name="reverse_number_button">1/x</string>
    <string name="pi_button">π</string>
    <string name="e_button">e</string>
    <string name="evaluate_expression_exception_snackbar_message">Check your expression</string>
    <string name="settings_text_view">Settings</string>
    <string name="light_theme_radio_button_text">Light theme</string>
    <string name="dark_theme_radio_button_text">Dark theme</string>
</resources>